--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     --cor-terciaria: #122372;
     --fonte:"Silkscreen", sans-serif;
 }
-
 *{
     padding: 0;
     margin: 0;
@@ -39,7 +38,7 @@ nav{
 
 nav a{
     text-decoration: none;
-    color: var(--cor-primaria);
+    color: var(--cor-de-fundo);
     margin: 0 2rem 1rem 0;
     font-size: 1.2rem;
 }
@@ -49,21 +48,26 @@ nav a:hover{
     transform: scale(0.9);
     transition: transform 0.5s;
 }
+
+footer{
+    background-color: var(--cor-terciaria);
+    color: var(--cor-secundaria);
+    text-align: center;
+}
+
 span{
     color: var(--cor-secundaria);
     font-weight: bold;
 }
-footer{
-    background-color: var(--cor-secundaria);
-    color: var(--cor-de-fundo);
-    text-align: center;
-}
+
 .graficos-container{
     margin: 5rem;
 }
+
 .graficos-texto{
     font-size: 1.3rem;
     text-align: center;
     padding: 2rem;
-    border: var(--cor-terciaria) solid 2px;
+    border: var(--cor-secundaria) solid 2px;
 }
+
